--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,18 @@ position: relative;
                     width: 100%;
                     transform: rotate(-20deg);
                 }
+
+                &::before {
+                    content: "";
+                    position: absolute;
+                    background-color: #000;
+                    width: 100%;
+                    height: 100px;
+                    top: 150%;
+                    left: 50px;
+                    border: 50%;
+                    filter: blur(75px);
+                }
             }
 
             & .content {
@@ -194,8 +206,10 @@ position: relative;
 
 section {
     & .list {
+        --calculation: 1;
+
         & .item {
-            transform: translateX(100vw);
+            transform: translateX(calc(100vw * var(--calculation)));
             transition: 0.5s;
             opacity: 0;
 
@@ -210,7 +224,7 @@ section {
 
             & .content {
                 & .car-information, h2, .description, .information {
-                    transform: translateX(200px);
+                    transform: translateX(calc(200px * var(--calculation)));
                     transition: 0.7s;
                     transition-delay: 0.3s;
                     opacity: 0;
